002-argo-cd/deployment/deployment.yaml
# Namespace web
apiVersion: v1
kind: Namespace
metadata:
  name: web
---

# Deployment for Hello World Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: registry.digitalocean.com/web-app-registry-frankfurt/my-hello-world:1.0.1
          ports:
            - containerPort: 80
---

# Service for Hello World Application
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: web
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

# Ingress for Hello World Application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: superdeepsearch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
    - host: www.superdeepsearch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
